# get-papers-lists

./: README.md
get-papers-list/: Merck_Co.csv  Roche_Ltd.csv  pyproject.toml
get-papers-list/get-papers-list/: README.md
get-papers-list/src/: config.py  main.py  paper_fetcher.py  paper_parser.py  paper_writer.py
get-papers-list/tests/: test_paper_fetcher.py  test_paper_parser.py  test_paper_writer.py
